--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             ></a>
            
           </div>
-          <!-- Footer About Text-->`
+          <!-- Footer About Text-->
           <div class="col-lg-4">
             <h4 class="text-uppercase mb-4">Hobbies</h4>
             <p class="lead mb-0">
