--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                   <!-- Portfolio Modal - Title-->
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0">
-                    Submarine
+                    스벨트 블로그 "스콜"
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
