스타일 수정

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- Portfolio Grid Items-->
         <div class="row justify-content-center">
           <!-- Portfolio Item 1-->
-          <div class="col-md-6 col-lg-3 mb-5">
+          <div class="col-md-6 col-lg-3">
             <div
               class="portfolio-item mx-auto"
               data-bs-toggle="modal"
@@ -133,11 +133,10 @@
     <section class="page-section portfolio" id="portfolio">
       <div class="container">
         <!-- Playground Section Heading-->
-            <h2
-                class="page-section-heading text-center text-uppercase text-secondary mb-0">
-                Playground
-            </h2>
-            
+          <h2
+              class="page-section-heading text-center text-uppercase text-secondary mb-0">
+              Playground
+          </h2>
         <!-- Icon Divider-->
         <div class="divider-custom">
           <div class="divider-custom-line"></div>
@@ -222,7 +221,7 @@
                 alt="그림판 이미지" />
             </div>
           </div>
-          <!-- Portfolio Item 5-->
+          <!-- Playground Item 5-->
           <div class="col-md-6 col-lg-3 mb-5 mb-md-0">
             <div
               class="portfolio-item mx-5"
@@ -241,7 +240,6 @@
                 alt="스벨트 이미지" />
             </div>
           </div>
-         
           </div>
         </div>
       </div>
