--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="text-center mt-4">
           <a
             class="btn btn-xl btn-outline-light"
-            href="https://www.notion.so/danielkim3/0c89f5904d8d40cba7dfa7a65e659231" target='_blank'>
+            href="https://danielkim3.notion.site/0c89f5904d8d40cba7dfa7a65e659231?pvs=4" target='_blank'>
             <i class="fas fa-comment me-2"></i>           
             이력서 
           </a>
